--- a/web/themes/dedrone/scss/paragraph/_technology_partners.scss
+++ b/web/themes/dedrone/scss/paragraph/_technology_partners.scss
@@ -18,8 +18,7 @@
 /*Page description paragraph*/
 .paragraph--type--bundle-description-tech-par-page 
 {
-	padding-top:150px;
-	.h1
+	h1
 	{
 		margin-bottom: 40px;
 	}
