--- a/web/themes/dedrone/templates/paragraph/paragraph--bundle-description-tech-par-page.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--bundle-description-tech-par-page.html.twig
@@ -54,10 +54,10 @@
                 <div class="col-12">
                   <h1>{{ content.field_shared_h1_title }}</h1>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-12 col-md-6">
                   {{ content.field_shared_p_simple_text[0] }}
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-12 col-md-6">
                   {{ content.field_shared_p_simple_text[1] }}
                 </div>
                 <div class="col-12">
