--- a/web/themes/dedrone/templates/paragraph/paragraph--bundle_content_tech_par_page.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--bundle_content_tech_par_page.html.twig
@@ -51,14 +51,14 @@
       <div{{ attributes.addClass(classes) }}>
         {% block content %}
            <div class = "row">
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-sm-12 col-md-3">
               <h2>{{ content.field_shared_h2_title }}</h2>
               {{ content.field_shared_link_label }}
             </div>
-            <div class="col-12 col-md-3 bundle_partner_logo justify-content-center">
+            <div class="col-12 col-sm-12 col-md-3 bundle_partner_logo justify-content-center">
               {{ content.field_bundle_partner_logo }}
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-sm-12 col-md-6">
               {{ content.field_shared_p_simple_text }}
             </div>
            </div>
