--- a/web/themes/dedrone/templates/paragraph/paragraph--shared-simple-white-title-.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--shared-simple-white-title-.html.twig
@@ -52,7 +52,7 @@
       <div id = "tech-par-title-background" class = "align-items-center">
           <div class = "container">
             <div class = "row justify-content-center">
-                <div class="col-6 text-center">
+                <div class="text-center shared_white_title_pos">
                   <h1>
                    {{ content.field_shared_h1_white_title }}
                   </h1>
