--- a/web/themes/dedrone/scss/base/_typography.scss
+++ b/web/themes/dedrone/scss/base/_typography.scss
@@ -8,6 +8,12 @@ h1{
     letter-spacing: 0;
     font-weight: 300;
     color: #111;
+
+    @media (max-width: 479px)
+    {
+        font-size: 32px;
+        line-height: 36px;
+    }
 }
 
 h2{
@@ -16,12 +22,18 @@ h2{
     letter-spacing: 0;
     font-weight: 300;
     color: #111;
+    @media (max-width: 479px)
+    {
+        font-size: 18px;
+    }
 }
 
 p
 {
     font-size: 16px;
     line-height: 24px;
+    letter-spacing: 0;
+    font-weight: 300;
     color: #111;
 }
 
