--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -6995,15 +6995,27 @@ body {
    ========================================================================== */
 /*Title paragraph*/
 .paragraph--type--shared-simple-white-title- #tech-par-title-background {
-  min-height: 550px;
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 21%, rgba(18, 18, 18, 0)), url(../images/technology-partners-title-background.jpg) no-repeat center top; }
+  min-height: 550px; }
 
 /*Page description paragraph*/
 .paragraph--type--bundle-description-tech-par-page h1 {
+  margin-top: 0px;
   margin-bottom: 40px; }
 
+.paragraph--type--bundle-description-tech-par-page p {
+  padding: 0px 10px; }
+
+.paragraph--type--bundle-description-tech-par-page a {
+  padding-left: 10px; }
+
 /*Main content paragraph*/
+.paragraph--type--bundle-content-tech-par-page h2 {
+  font-weight: 400;
+  margin: 10px 0px; }
+
 .paragraph--type--bundle-content-tech-par-page .bundle_partner_logo {
+  padding-top: 15px;
+  padding-bottom: 10px;
   display: -ms-flexbox;
   display: flex;
   width: 160px;
@@ -7038,56 +7050,62 @@ body {
 
 /* Buttons style
 ========================================================================== */
-.shared_white_btn {
+.shared_adit_inf_btns a {
   display: inline-block;
-  min-width: 220px;
-  margin-right: 10px;
-  margin-left: 10px;
-  margin-top: 20px;
-  margin-bottom: 10px;
+  text-decoration: none;
+  text-align: center;
   padding: 15px 50px;
   border-radius: 4px;
+  min-width: 220px;
+  margin: 0px 10px;
+  border-color: #fff;
+  background-color: transparent;
+  background-image: none;
+  color: #fff;
+  border: 1px solid #fff;
   font-size: 12px;
   line-height: 15px;
   font-weight: 400; }
+  @media (max-width: 575.98px) {
+    .shared_adit_inf_btns a {
+      width: 100%;
+      margin: 20px 0px; } }
 
-.shared_white_btn:hover {
-  color: #f05c40; }
+.shared_adit_inf_btns a:hover {
+  color: #f05c40;
+  background-color: #fff; }
 
 .shared_adit_inf_btns {
-  margin-top: 25px; }
+  margin: 25px 10px 0px 10px; }
 
 /* Styles for shared paragraph
 ========================================================================== */
-.paragraph--type--shared-simple-white-title- .shared_white_title_pos {
-  max-width: 500px;
-  color: #fff;
-  /*Title*/
-  /*Description*/ }
-  @media (max-width: 479px) {
-    .paragraph--type--shared-simple-white-title- .shared_white_title_pos {
-      padding: 0px 25px; } }
-  .paragraph--type--shared-simple-white-title- .shared_white_title_pos h1 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding-top: 5px;
-    color: #fff; }
-  .paragraph--type--shared-simple-white-title- .shared_white_title_pos h2 {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    color: #fff; }
-
-@media (max-width: 1200px) {
-  .paragraph--type--shared-simple-white-title- {
-    margin-bottom: 150px; } }
-
-@media (max-width: 991px) {
-  .paragraph--type--shared-simple-white-title- {
-    margin-bottom: 100px; } }
-
-@media (max-width: 479px) {
-  .paragraph--type--shared-simple-white-title- {
-    margin-bottom: 75px; } }
+.paragraph--type--shared-simple-white-title- {
+  margin-bottom: 75px; }
+  .paragraph--type--shared-simple-white-title- .shared_white_title_pos {
+    max-width: 500px;
+    color: #fff;
+    padding: 0px 25px;
+    /*Title*/
+    /*Description*/ }
+    .paragraph--type--shared-simple-white-title- .shared_white_title_pos h1 {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      padding-top: 5px;
+      color: #fff; }
+    .paragraph--type--shared-simple-white-title- .shared_white_title_pos h2 {
+      margin-top: 20px;
+      margin-bottom: 10px;
+      color: #fff; }
+  @media (min-width: 576px) {
+    .paragraph--type--shared-simple-white-title- {
+      margin-bottom: 100px; } }
+  @media (min-width: 768px) {
+    .paragraph--type--shared-simple-white-title- {
+      margin-bottom: 150px; } }
+  @media (min-width: 992px) {
+    .paragraph--type--shared-simple-white-title- {
+      margin-bottom: 150px; } }
 
 .paragraph--type--shared-aditional-information h1 {
   color: #fff;
