--- a/web/themes/dedrone/scss/paragraph/_technology_partners.scss
+++ b/web/themes/dedrone/scss/paragraph/_technology_partners.scss
@@ -11,24 +11,36 @@
 	{
 	    @extend #full_width_background;
 	    min-height: 550px;
-	    background: linear-gradient(90deg,rgba(0,0,0,.5) 21%,hsla(0,0%,7%,0)), url(../images/technology-partners-title-background.jpg) no-repeat center top;
+
+	    
 	}
 }
 
 /*Page description paragraph*/
 .paragraph--type--bundle-description-tech-par-page 
 {
-	h1
+	h1{	margin-top:0px;
+	margin-bottom: 40px; }
+	p
 	{
-		margin-bottom: 40px;
+		padding: 0px 10px;
 	}
+	a{ padding-left: 10px; }
 }
 
 /*Main content paragraph*/
 .paragraph--type--bundle-content-tech-par-page
 {
+	h2
+	{
+		font-weight: 400;
+		margin: 10px 0px;
+
+	}
 	.bundle_partner_logo
 	{
+		padding-top: 15px;
+		padding-bottom: 10px;
 		display:flex;
 		width:160px;
 		height:100%;
@@ -51,3 +63,7 @@
 {
 
 }
+
+
+
+{{ base_path ~ directory }}/images/technology-partners-title-background.jpg
