--- a/web/themes/dedrone/scss/base/_secondary-custimers-block-img-text.scss
+++ b/web/themes/dedrone/scss/base/_secondary-custimers-block-img-text.scss
@@ -1,18 +1,8 @@
 .customers-img-text-wrap{
   .img-wrap{
-    .field{
-      max-height: 450px;
-      overflow: hidden;
-      margin-left: -15px;
-      a{
-        position: relative;
-        z-index: -5;
-        img{
-          width: 100%;
-          height: auto;
-        }
-      }
-    }
+    height: 475px;
+    overflow: hidden;
+    margin-left: -15px;
   }
   .text-wrap{
     height: 100%;
