--- a/web/themes/dedrone/templates/paragraph/paragraph--shared-aditional-information.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--shared-aditional-information.html.twig
@@ -10,7 +10,7 @@
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
-      <div id = "aditional_inf_background" class = "align-items-center">
+      <div style="background-color:#{{background_color}}">
           <div class = "container">
             <div class = "row justify-content-center">
                   <div class="col-12">
