--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -6994,9 +6994,6 @@ body {
    - other page styles defined in _shared.scss.
    ========================================================================== */
 /*Title paragraph*/
-.paragraph--type--shared-simple-white-title- #tech-par-title-background {
-  min-height: 550px; }
-
 /*Page description paragraph*/
 .paragraph--type--bundle-description-tech-par-page h1 {
   margin-top: 0px;
@@ -7036,43 +7033,12 @@ body {
 ========================================================================== */
 /* Paragraphs background styles
 ========================================================================== */
-/*Styles for makes full width paragraph background*/
-#full_width_background, .paragraph--type--shared-simple-white-title- #tech-par-title-background, #aditional_inf_background {
-  background-position: 0 0,50% 50%;
-  background-size: auto,cover; }
-
-#aditional_inf_background {
-  background: #f05c40 no-repeat center top; }
-
-/* Buttons style
-========================================================================== */
-.shared_adit_inf_btns a {
-  display: inline-block;
-  text-decoration: none;
-  text-align: center;
-  padding: 15px 50px;
-  border-radius: 4px;
-  min-width: 220px;
-  margin: 0px 10px;
-  border-color: #fff;
-  background-color: transparent;
-  background-image: none;
-  color: #fff;
-  border: 1px solid #fff;
-  font-size: 12px;
-  line-height: 15px;
-  font-weight: 400; }
-  @media (max-width: 575.98px) {
-    .shared_adit_inf_btns a {
-      width: 100%;
-      margin: 20px 0px; } }
-
-.shared_adit_inf_btns a:hover {
-  color: #f05c40;
-  background-color: #fff; }
-
-.shared_adit_inf_btns {
-  margin: 25px 10px 0px 10px; }
+.paragraph--type--shared-simple-white-title- .background_image_position {
+  background-position: 0 0,50% 50% !important;
+  background-size: auto,cover !important;
+  min-height: 550px !important;
+  display: -ms-flexbox !important;
+  display: flex !important; }
 
 /* Styles for shared paragraph
 ========================================================================== */
@@ -7110,3 +7076,33 @@ body {
 .paragraph--type--shared-aditional-information .container {
   padding-top: 150px;
   padding-bottom: 150px; }
+
+/* Buttons style
+========================================================================== */
+.shared_adit_inf_btns a {
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  padding: 15px 50px;
+  border-radius: 4px;
+  min-width: 220px;
+  margin: 0px 10px;
+  border-color: #fff;
+  background-color: transparent;
+  background-image: none;
+  color: #fff;
+  border: 1px solid #fff;
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: 400; }
+  @media (max-width: 575.98px) {
+    .shared_adit_inf_btns a {
+      width: 100%;
+      margin: 20px 0px; } }
+
+.shared_adit_inf_btns a:hover {
+  color: #f05c40;
+  background-color: #fff; }
+
+.shared_adit_inf_btns {
+  margin: 25px 10px 0px 10px; }
