Page products and some changes

--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -11,7 +11,7 @@
 @import 'blocks/header';
 @import 'blocks/_footer_menu';
 @import 'blocks/_footer';
-@import 'blocks/page_Products.scss';
+@import 'blocks/products_software.scss';
 
 // Import Layouts
 // @import 'layouts/home';
