--- a/web/themes/dedrone/css/page_products.css
+++ b/web/themes/dedrone/css/page_products.css
@@ -380,7 +380,7 @@
   box-sizing: border-box;
   color: rgb(248, 248, 248);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: nowrap;
   font-size: 14px;
   font-weight: 400;
