finished home page

--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -9,6 +9,15 @@
 
 // Import Components
 @import 'blocks/header';
+@import 'blocks/tabs';
+@import 'blocks/home-main-slider';
+@import 'blocks/benefits-trio';
+@import 'blocks/text-columns';
+@import 'blocks/products-intro';
+@import 'blocks/customers';
+@import 'blocks/buttons-section';
+@import 'blocks/webinars-section';
+@import 'blocks/cta-section';
 
 // Import Layouts
 // @import 'layouts/home';
