--- a/web/themes/dedrone/templates/paragraph/paragraph--background-description.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--background-description.html.twig
@@ -46,10 +46,14 @@
     not paragraph.isPublished() ? 'paragraph--unpublished'
   ]
 %}
+<section class='{{ content.css_class }}' style="background-image: url('{{ content.field_background_image.0['#markup'] }}')">
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
-      {{ content }}
+      <div class="container">
+          <div class="wpap-content">{{ content|without('field_background_image') }}</div>
+      </div>
     {% endblock %}
   </div>
 {% endblock paragraph %}
+</section>
