--- a/web/themes/dedrone/templates/paragraph/paragraph--text-rapagraph.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--text-rapagraph.html.twig
@@ -48,8 +48,10 @@
 %}
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
-    {% block content %}
-      {{ content }}
-    {% endblock %}
+    <div class="container">
+      {% block content %}
+        {{ content }}
+      {% endblock %}
+    </div>
   </div>
 {% endblock paragraph %}
