--- a/web/themes/dedrone/scss/base/_global.scss
+++ b/web/themes/dedrone/scss/base/_global.scss
@@ -8,3 +8,18 @@ body {
 	}
     color: $body-color;
 }
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 300;
+}
+
+img {
+	display: block;
+	width: 100%;
+	height: auto;
+}
+
+a {
+	display: inline-block;
+	transition: 0.25s all ease;
+}
