--- a/web/themes/dedrone/css/blocks/small_text_wrapper.css
+++ b/web/themes/dedrone/css/blocks/small_text_wrapper.css
@@ -4,7 +4,8 @@
   .small-text-wrapper h2 {
     font-size: 20px;
     line-height: 24px;
-    margin-top: 50px; }
+    margin-top: 50px;
+    font-weight: 500; }
     .small-text-wrapper h2:first-child {
       margin-top: 0; }
   .small-text-wrapper p {
