--- a/web/themes/dedrone/scss/blocks/small_text_wrapper.scss
+++ b/web/themes/dedrone/scss/blocks/small_text_wrapper.scss
@@ -5,6 +5,7 @@
     font-size: 20px;
     line-height: 24px;
     margin-top: 50px;
+    font-weight: 500;
     &:first-child{
       margin-top: 0;
     }
