Add preproces to background image

--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -6955,3 +6955,7 @@ body {
       border-left: 1px solid #808080;
       padding-left: 15px;
       padding-right: 15px; }
+
+.page_software_your_airspace {
+  height: 300px;
+  padding: 150px 0px; }
