--- a/web/themes/dedrone/templates/paragraph/paragraph--page-software-your-airspace-secu.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--page-software-your-airspace-secu.html.twig
@@ -6,7 +6,7 @@
     not paragraph.isPublished() ? 'paragraph--unpublished'
   ]
 %}
-<section class='{{content.css_class}}'   style="background:url({{ background_image_url }}) no-repeat center top;" >
+<section  class="page_software_your_airspace"  style="background:url({{ background_image_url }}) no-repeat center top; background-position: 0 50%;" >
   {% block paragraph %}
     <div{{ attributes.addClass(classes) }}>
       {% block content %}
