--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -14,6 +14,8 @@
 @import 'blocks/secondary_custimers_block-img_text';
 @import 'blocks/small_text_wrapper';
 @import 'blocks/secondary_custumers_slider';
+@import 'blocks/secondary_page_slider';
+@import 'blocks/customer_image_text_wrap';
 
 // Import Layouts
 // @import 'layouts/home';
