--- a/web/themes/dedrone/css/blocks/secondary_custumers_slider.css
+++ b/web/themes/dedrone/css/blocks/secondary_custumers_slider.css
@@ -2,7 +2,8 @@
   position: relative;
   z-index: 1;
   overflow: hidden;
-  padding: 150px 0; }
+  padding: 150px 0;
+  min-height: 550px; }
   .customers-secondary-slider:before {
     content: '';
     display: block;
@@ -70,3 +71,6 @@
         line-height: 24px;
         font-weight: 300;
         margin: 20px 0 5px; }
+  @media (max-width: 767px) {
+    .customers-secondary-slider {
+      padding: 75px 25px; } }
