--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -7038,7 +7038,8 @@ body {
   position: relative;
   z-index: 1;
   overflow: hidden;
-  padding: 150px 0; }
+  padding: 150px 0;
+  min-height: 550px; }
   .customers-secondary-slider:before {
     content: '';
     display: block;
@@ -7106,3 +7107,75 @@ body {
         line-height: 24px;
         font-weight: 300;
         margin: 20px 0 5px; }
+  @media (max-width: 767px) {
+    .customers-secondary-slider {
+      padding: 75px 25px; } }
+
+.customers-page-slide {
+  padding: 150px 0;
+  min-height: 550px; }
+  @media (max-width: 767px) {
+    .customers-page-slide {
+      padding: 75px 25px; } }
+  .customers-page-slide .text-wrapper {
+    text-align: center;
+    max-width: 500px;
+    width: 100%;
+    margin: 0 auto; }
+    .customers-page-slide .text-wrapper h2 {
+      font-size: 40px;
+      color: #fff;
+      line-height: 46px;
+      font-weight: 300; }
+    .customers-page-slide .text-wrapper p {
+      font-size: 20px;
+      color: #fff;
+      line-height: 24px;
+      margin-top: 20px; }
+
+.customer-image-text-wrap {
+  padding: 150px 0; }
+  .customer-image-text-wrap .img-wrap a {
+    position: relative;
+    z-index: -1; }
+    .customer-image-text-wrap .img-wrap a img {
+      width: 100%;
+      height: inherit; }
+  .customer-image-text-wrap .text-wrap {
+    color: #111; }
+    .customer-image-text-wrap .text-wrap h3 {
+      font-size: 15px;
+      line-height: 20px;
+      font-weight: 500;
+      margin-top: 25px;
+      text-transform: uppercase; }
+    .customer-image-text-wrap .text-wrap h2 {
+      font-size: 40px;
+      line-height: 45px;
+      margin-top: 35px; }
+    .customer-image-text-wrap .text-wrap p {
+      font-size: 16px;
+      line-height: 24px;
+      margin-top: 25px; }
+    .customer-image-text-wrap .text-wrap .button-wrapper {
+      margin: 20px 0 10px;
+      max-width: 210px; }
+      .customer-image-text-wrap .text-wrap .button-wrapper a {
+        display: inline-block;
+        text-align: center;
+        max-width: 210px;
+        height: 45px;
+        line-height: 15px;
+        width: 100%;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        padding: 15px 30px;
+        border-radius: 4px;
+        background-image: linear-gradient(180deg, #009ee3, #009ee3);
+        color: #fff;
+        font-size: 12px;
+        font-weight: 400;
+        text-transform: uppercase; }
+        .customer-image-text-wrap .text-wrap .button-wrapper a:hover {
+          text-decoration: none;
+          background-image: linear-gradient(180deg, #008ecc, #008ecc); }
