Save some config and css styles

--- a/web/themes/dedrone/templates/paragraph/paragraph--page-software-dronedna.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--page-software-dronedna.html.twig
@@ -7,7 +7,7 @@
     not paragraph.isPublished() ? 'paragraph--unpublished'
   ]
 %}
-<section class="software-enabled-security-section">
+<div class="section_dronedna">
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
@@ -15,4 +15,4 @@
     {% endblock %}
   </div>
 {% endblock paragraph %}
-</section>
+</div>
