--- a/web/themes/dedrone/scss/blocks/_products_software.scss
+++ b/web/themes/dedrone/scss/blocks/_products_software.scss
@@ -1,61 +1,149 @@
-.page_software_your_airspace {
-  height: 600px;
-  align-items: center;
-  box-sizing: border-box;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
+.page_software_your_airspace
+};
+flex:display;
+center:justify-content;
+nowrap:flex-wrap;
+row:flex-direction;
+border-box:box-sizing;
+center:align-items;
+600px:height{
+.page_software_your_airspace
+}
+}
+};
+none:text-transform;
+0:letter-spacing;
+left:text-align;
+200:font-weight;
+24px:line-height;
+20px:font-size;
+20px:margin-top;
+rgb(255,255,255):color{
+p
+};
+0:margin-top;
+none:text-transform;
+none:border-style;
+#bbb:border-bottom-color;
+0:letter-spacing;
+left:text-align;
+45px:line-height;
+40px:font-size;
+'Pluto Sans Condensed Extra Light',sans-serif:font-family;
+0:border-bottom-width;
+0:padding-bottom;
+400:font-weight;
+#fcf8f8:color;
+none:text-decoration;
+both:clear{
+h2 ;
+0 10px:padding;
+1px:min-height;
+left:float;
+relative:position;
+320px:width;
+190px:height{
+.field--name-field-section-your-airspace-secu ;
+auto:margin-right;
+auto:margin-left;
+190px:height;
+left:text-align;
+0 auto:padding;
+960px:max-width;
+1:flex-shrink;
+1:flex-grow;
+0:flex-basis;
+flex:display;
+center:align-items{
+.paragraph--type--page-software-your-airspace-secu
+}
+
+.software-enabled-security-section {
+background-image: linear-gradient(180deg,#011d2a,#011d2a);
+box-sizing: border-box;
+padding-top: 150px;
+padding-bottom: 150px;
+display: block;
+font-family: 'Pluto Sans Light',sans-serif;
+color: #818181;
+line-height: 26px;
+
+.paragraph--type--paragrap-image-and-text-left- {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 960px;
   display: flex;
 
-  .paragraph--type--page-software-your-airspace-secu {
-    align-items: center;
-    display: flex;
-    flex-basis: 0;
-    flex-grow: 1;
-    flex-shrink: 1;
-    max-width: 960px;
-    padding: 0 auto;
-    text-align: left;
-    height: 190px;
-    margin-left: auto;
-    margin-right: auto;
+  .field--name-field-dronetracker-diagram-pilod {
+    position: relative;
+    float: left;
+    min-height: 1px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-right: 80px;
 
-    .field--name-field-section-your-airspace-secu {
-      height: 190px;
-      width: 320px;
-      position: relative;
-      float: left;
-      min-height: 1px;
-      padding: 0 10px;
-
-      h2 {
-        clear: both;
-        text-decoration: none;
-        color: #fcf8f8;
-        font-weight: 400;
-        padding-bottom: 0;
-        border-bottom-width: 0;
-        font-family: 'Pluto Sans Condensed Extra Light',sans-serif;
-        font-size: 40px;
-        line-height: 45px;
-        text-align: left;
-        letter-spacing: 0;
-        border-bottom-color: #bbb;
-        border-style: none;
-        text-transform: none;
-        margin-top: 0;
-      }
-
-      p {
-        color: rgb(255,255,255);
-        margin-top: 20px;
-        font-size: 20px;
-        line-height: 24px;
-        font-weight: 200;
-        text-align: left;
-        letter-spacing: 0;
-        text-transform: none;
-      }
+    img {
+      border: 0;
+      vertical-align: middle;
+      margin-top: 50px;
+      opacity: 1;
+      transform: translateX(0px) translateY(0px) translateZ(0px);
+      display: block;
+      transition: opacity 400ms ease 0s, transform 400ms ease 0s;
+      margin-bottom: 0;
+      color: #818181;
+      line-height: 26px;
     }
   }
+
+  .field--name-field__software-enabled-security {
+    color: rgb(129, 129, 129);
+    float: left;
+    position: relative;
+    text-size-adjust: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    h2 {
+      color: #ece9e9;
+      font-weight: 50;
+      padding-bottom: 0;
+      border-bottom-width: 0;
+      font-family: 'Pluto Sans Condensed Extra Light',sans-serif;
+      font-size: 40px;
+      line-height: 45px;
+      text-align: left;
+      letter-spacing: 0;
+      border-bottom-color: #bbb;
+      border-style: none;
+      text-transform: none;
+      font-weight: 100;
+    }
+
+    p {
+      color: #ece9e9;
+      clear: none;
+      display: inline-block;
+      float: none;
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 24px;
+      list-style-type: disc;
+      margin-top: 20px;
+      margin-bottom: 0;
+      text-align: left;
+    }
+  }
+}
+
+.section_dronedna{
+  align-items: center;
+  box-sizing: border-box;
+  color: rgb(129, 129,129);
+  display:block;
+  flex-direction: row;
+  justify-content: center;
+  padding: 150px 0;
+  text-size-adjust:100%;
+   
 }
